--- a/package.json
+++ b/package.json
@@ -15,12 +15,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.23.1",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/stack": "^7.2.3",
     "expo": "~52.0.41",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.7",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "~4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-test-renderer": "^18.3.1"
   },
   "devDependencies": {
@@ -33,6 +41,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "eslint-plugin-jest": "^28.11.0",
