--- a/package.json
+++ b/package.json
@@ -15,32 +15,50 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "~1.23.1",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
-    "expo": "~52.0.41",
+    "axios": "^1.8.4",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "expo": "~52.0.42",
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
+    "inversify": "^6.0.1",
+    "inversify-react": "^1.2.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "~0.76.8",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-test-renderer": "^18.3.1"
+    "react-native-web": "~0.19.13",
+    "react-test-renderer": "^18.3.1",
+    "reflect-metadata": "^0.2.2",
+    "watchman": "^1.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@babel/preset-env": "^7.26.9",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@react-native-community/cli": "^10.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/axios": "^0.14.4",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
@@ -61,5 +79,12 @@
       "prettier --write './src/**/*{js,ts,jsx,tsx}'"
     ]
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
