--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@babel/plugin-transform-class-properties": "^7.25.9",
     "@expo/metro-runtime": "~4.0.1",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "~1.23.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
     "axios": "^1.8.4",
@@ -32,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-native": "~0.76.8",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.4.0",
