--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "src/*": ["src/*"]
     },
+    "types": ["node", "jest", "react", "react-native"],
     "target": "esnext",
     "module": "esnext",
     "lib": ["dom", "esnext"],
