--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-shared-element": "^0.8.9",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
+    "react-navigation-shared-element": "^3.1.3",
     "react-test-renderer": "^18.3.1",
     "reflect-metadata": "^0.2.2",
     "watchman": "^1.0.0",
