--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "lint": "npm run check-typescript && npm run check-eslint",
     "release": "standard-version",
     "prepare": "husky",
-    "test": "jest"
+    "test": "jest",
+    "apk": "bundletool build-apks --bundle=application-c23f72ea-1136-4289-9b5f-34a4d6e02971.aab --output=app-release.apks"
   },
   "dependencies": {
     "@babel/plugin-transform-class-properties": "^7.25.9",
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "~1.23.1",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
     "axios": "^1.8.4",
@@ -38,7 +39,6 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-shared-element": "^0.8.9",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-navigation-shared-element": "^3.1.3",
@@ -63,7 +63,6 @@
     "@types/axios": "^0.14.4",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
@@ -91,5 +90,10 @@
         "listUnknownPackages": false
       }
     }
+  },
+  "overrides": {
+    "metro": "^0.81.0",
+    "metro-config": "^0.81.0",
+    "metro-resolver": "^0.81.0"
   }
 }
